# rust-persian-tools

./: Cargo.toml  Contributing.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: arg_parser.rs  constants.rs  main.rs  wrapper.rs
cli/src/wraper/: mod.rs
src/: lib.rs
src/add_ordinal_suffix/: mod.rs
src/arabic_chars/: mod.rs
src/bill/: mod.rs
src/commas/: add_commas.rs  mod.rs  remove_commas.rs
src/digits/: chars.rs  digit_converter.rs  mod.rs
src/extract_card_number/: extracted_card_number.rs  mod.rs
src/find_capital_by_province/: mod.rs
src/get_bank_name_by_card_number/: bank_codes.rs  errors.rs  mod.rs
src/get_place_by_iran_national_id/: errors.rs  mod.rs  place_by_iran_national_id.rs  places.rs
src/half_space/: mod.rs
src/is_arabic/: is_arabic.rs  mod.rs
src/is_persian/: farsi_chars.rs  has_persian.rs  is_persian.rs  mod.rs
src/legal_id/: errors.rs  mod.rs
src/national_id/: mod.rs  serde.rs
src/number_plate/: codes.rs  errors.rs  helpers.rs  mod.rs  types.rs
src/number_to_words/: error.rs  get_word.rs  mod.rs  three_digits.rs
src/persian_chars/: mod.rs
src/phone_number/: mod.rs  operators.rs
src/remaining_time/: mod.rs
src/remove_ordinal_suffix/: mod.rs
src/sheba/: bank_info.rs  chacksum.rs  errors.rs  mod.rs
src/time_ago/: mod.rs
src/time_diff/: mod.rs
src/to_persian_chars/: mod.rs
src/url_fix/: mod.rs
src/verity_card_number/: errors.rs  mod.rs
src/words_to_number/: constants.rs  errors.rs  mod.rs
