[package]
name = "rust-persian-tools"
version = "0.1.0"
edition = "2021"
description = "Rust version of Persian Tools"
license = "MIT"
readme = "README.md"
# TODO: Replace crate name in below after publishing on crates.io:
# homepage = "https://crates.io/crates/<NAME>"
# documentation = "https://docs.rs/<NAME>"
repository = "https://github.com/persian-tools/rust-persian-tools"
categories = ["localization", "languages", "internationalization"]
keywords = ["iran", "persian", "farsi"]
# TODO: Add `CONTRIBUTING.md` file and append it to the below list:
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "README.md"]


[dependencies]
regex = "1.10.3"
urlencoding = { version = "2.1.3", optional = true }
serde = { version = "1.0.195", features = ["derive"], optional = true }
thiserror = { version = "1.0.56", optional = true }
num = { version = "0.4", optional = true }
num-derive = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }
chrono = { version = "0.4.31", optional = true }

# Edit `Makefile` and `src/lib.src` after making changes in this section:
[features]
full = [
    "add-ordinal-suffix",
    "commas",
    "digits",
    "find-capital-by-province",
    "persian-chars",
    "arabic-chars",
    "national-id",
    "remove-ordinal-suffix",
    "url-fix",
    "verity-card-number",
    "phone-number",
    "bill",
    "number-to-words",
    "get-bank-name-by-card-number",
    "extract-card-number",
    "time-ago",
    "get-place-by-iran-national-id",
    "half-space",
    "legal-id",
    "words-to-number",
    "sheba",
] # For now, by default we enable all features:


default = ["full"]
add-ordinal-suffix = []
commas = []
digits = []
find-capital-by-province = ["persian-chars"]
persian-chars = []
arabic-chars = []
national-id = ["dep:thiserror"]
remove-ordinal-suffix = []
url-fix = ["dep:urlencoding"]
phone-number = ["dep:thiserror"]
verity-card-number = ["dep:thiserror"]
serde = ["dep:serde"]
bill = ["dep:num", "dep:num-derive", "dep:num-traits", "dep:thiserror"]
number-to-words = ["dep:thiserror", "commas"]
get-bank-name-by-card-number = ["dep:thiserror"]
extract-card-number = []
time-ago = ["dep:thiserror", "dep:chrono"]
get-place-by-iran-national-id = ["dep:thiserror"]
half-space = []
legal-id = ["dep:thiserror"]
words-to-number = ["dep:thiserror", "commas", "digits", "remove-ordinal-suffix"]
sheba = ["dep:thiserror"]

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
# To test `serde` feature expectaions:
serde_json = "1.0.111"
