[package]
name = "rust-persian-tools"
version = "1.1.3"
edition = "2021"
description = "Official Rust implementation of Persian Tools"
license = "MIT"
readme = "README.md"
# documentation = "https://docs.rs/rust-persian-tools" # if not set docs.rs will generate one and put it in place 
homepage = "https://crates.io/crates/rust-persian-tools"
repository = "https://github.com/persian-tools/rust-persian-tools"
categories = ["localization", "languages", "internationalization", "tools"]
keywords = ["iran", "persian", "farsi", "tools"]
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "README.md", "Contributing.md", "logo.png"]


[dependencies]
urlencoding = { version = "2.1.3", optional = true }
serde = { version = "1.0.199", features = ["derive"], optional = true }
thiserror = { version = "1.0.59", optional = true }
num = { version = "0.4", optional = true }
num-derive = { version = "0.4.2", optional = true }
num-traits = { version = "0.2", optional = true }
chrono = { version = "0.4.38", optional = true }

# Edit `Makefile` and `src/lib.src` after making changes in this section:
[features]
full = [
    "add-ordinal-suffix",
    "commas",
    "digits",
    "find-capital-by-province",
    "persian-chars",
    "arabic-chars",
    "national-id",
    "remove-ordinal-suffix",
    "url-fix",
    "verity-card-number",
    "number-plate",
    "phone-number",
    "bill",
    "number-to-words",
    "get-bank-name-by-card-number",
    "extract-card-number",
    "time-diff",
    "get-place-by-iran-national-id",
    "half-space",
    "legal-id",
    "words-to-number",
    "sheba",
] # For now, by default we enable all features:


default = ["full"]
add-ordinal-suffix = []
commas = []
digits = []
find-capital-by-province = ["persian-chars"]
persian-chars = []
arabic-chars = []
national-id = ["dep:thiserror"]
remove-ordinal-suffix = []
url-fix = ["dep:urlencoding"]
number-plate = []
phone-number = ["dep:thiserror"]
verity-card-number = ["dep:thiserror"]
serde = ["dep:serde"]
bill = ["dep:num", "dep:num-derive", "dep:num-traits", "dep:thiserror"]
number-to-words = ["dep:thiserror", "commas"]
get-bank-name-by-card-number = ["dep:thiserror"]
extract-card-number = []
time-diff = ["dep:thiserror", "dep:chrono", "digits"]
get-place-by-iran-national-id = ["dep:thiserror"]
half-space = []
legal-id = ["dep:thiserror"]
words-to-number = ["dep:thiserror", "commas", "digits", "remove-ordinal-suffix"]
sheba = ["dep:thiserror"]

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
# To test `serde` feature expectaions:
serde_json = "1.0.116"
